work/first/httpserver-metric.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
  labels:
    app: httpserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8891"
      labels:
        app: httpserver
    spec:
      containers:
        - env:
            - name: VERSION
              valueFrom:
                configMapKeyRef:
                  name: testconfig
                  key: VERSION
          image: docker.io/ldkyq0322/httpserver:v3
          imagePullPolicy: IfNotPresent
          name: httpserver
          ports:
            - containerPort: 8891
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8891
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 20
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8891
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 20
            failureThreshold: 5
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 50m
              memory: 50Mi
