work/first/httpserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
  labels:
    app: httpserver
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
        - env:
            - name: VERSION
              valueFrom:
                configMapKeyRef:
                  name: testconfig
                  key: VERSION
          image: docker.io/ldkyq0322/httpserver:v2
          imagePullPolicy: IfNotPresent
          name: httpserver
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8891
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 20
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8891
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 20
            failureThreshold: 5
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 50m
              memory: 50Mi
