work/first/httpserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      name: http
      targetPort: 8891
  selector:
    app: httpserver
