work/first/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
  name: httpserver-ssl
spec:
  ingressClassName: nginx
  rules:
    - host: httpserver.xi-nian.com
      http:
        paths:
          - backend:
              service:
                name: httpserver
                port:
                  number: 80
            path: /
            pathType: Prefix
